# dp-federated-learning-framework

./: .gitignore  README.md  pyproject.toml
configs/: dryrun_fedavg.yaml  mnist_dpfedavg_smoke.yaml  mnist_torch_smoke.yaml
src/fldp/: __init__.py
src/fldp/artifacts/: __init__.py  runs.py
src/fldp/data/: __init__.py  datasets.py  partitions.py
src/fldp/experiments/: __init__.py  config.py  driver.py  dryrun.py  torch_smoke.py
src/fldp/flower/: __init__.py  client.py
src/fldp/models/: __init__.py  cnn.py
src/fldp/privacy/: __init__.py  accountant.py  inverse.py
src/fldp/strategies/: __init__.py  dp_fedavg.py  fedavg.py  parameters.py
src/fldp/train/: __init__.py  loops.py  seed.py  torch_parameters.py
tests/: test_artifacts.py  test_datasets.py  test_dp_fedavg.py  test_experiment_driver.py  test_fedavg.py  test_flower_client.py  test_models.py  test_package.py  test_parameters.py  test_partitions.py  test_privacy_accountant.py  test_torch_parameters.py  test_train.py
