[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fldp"
version = "0.1.0"
description = "Federated learning with differential privacy research prototype"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atikul Munna", email = "atikul.munna@northsouth.edu" },
]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ml = [
  "torch>=2.0",
  "torchvision>=0.15",
  "opacus>=1.4",
  "flwr>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
